US5769 - Inline Giving Style Validation Errors Correct placement of alert message on billing/bank account page and adjust spacing of text within alert across application.

--- a/src/styles/layout/_inline-giving.scss
+++ b/src/styles/layout/_inline-giving.scss
@@ -525,7 +525,7 @@
 
       p {
         line-height: 10px;
-        margin-bottom: 9px;
+        margin: 7px 0 10px;
       }
 
       ul {
